# velos

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  demo.tape  docker-compose.yml
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  bench.sh
config/: velos.example.toml
crates/velos-ai/: Cargo.toml
crates/velos-ai/src/: agent.rs  analyzer.rs  anthropic.rs  i18n.rs  lib.rs  openai.rs  provider.rs  types.rs
crates/velos-ai/src/tools/: create_file.rs  delete_file.rs  edit_file.rs  git_diff.rs  glob.rs  grep.rs  list_dir.rs  mod.rs  read_file.rs  run_command.rs
crates/velos-api/: Cargo.toml
crates/velos-api/src/: lib.rs  middleware.rs  routes.rs  websocket.rs
crates/velos-cli/: Cargo.toml
crates/velos-cli/src/: main.rs
crates/velos-cli/src/commands/: ai.rs  api.rs  completions.rs  config.rs  daemon.rs  delete.rs  flush.rs  info.rs  list.rs  logs.rs  metrics.rs  mod.rs  monit.rs  notify_crash.rs  notify_error.rs  ping.rs  reload.rs  restart.rs  resurrect.rs  save.rs  scale.rs  start.rs  startup.rs  stop.rs  telegram_poller.rs
crates/velos-client/: Cargo.toml
crates/velos-client/src/: commands.rs  connection.rs  lib.rs
crates/velos-config/: Cargo.toml
crates/velos-config/src/: lib.rs
crates/velos-core/: Cargo.toml
crates/velos-core/src/: error.rs  lib.rs  process.rs  protocol.rs
crates/velos-ffi/: Cargo.toml  build.rs
crates/velos-ffi/src/: lib.rs
crates/velos-log-engine/: Cargo.toml
crates/velos-log-engine/src/: anomaly.rs  classifier.rs  dedup.rs  format.rs  lib.rs  pattern.rs  summary.rs
crates/velos-mcp/: Cargo.toml
crates/velos-mcp/src/: http.rs  lib.rs  schema.rs  server.rs  tools.rs
crates/velos-metrics/: Cargo.toml
crates/velos-metrics/src/: otel.rs  prometheus.rs
distribution/: install.sh  nfpm.yml
distribution/aur/: PKGBUILD
distribution/homebrew/: velos.rb
distribution/scripts/: generate-apt-repo.sh  generate-yum-repo.sh  setup-apt.sh  setup-yum.sh
docs/: ARCHITECTURE.md  CONCEPT.md  ROADMAP.md  TASKS.md  mcp-tools.md  velos.1
docs/plans/: 2026-03-05-monit-redesign.md  2026-03-06-ai-crash-analyzer-design.md
docs/tasks/: phase-0-planning.md  phase-1-skeleton.md  phase-2-core-daemon.md  phase-3-full-cli.md  phase-4-smart-logs.md  phase-5-ai-mcp.md  phase-6-cluster-metrics.md  phase-7-polish-release.md
examples/multi-process/: README.md  velos.toml
examples/multi-process/backend/: server.js
examples/multi-process/frontend/: server.js
examples/multi-process/worker/: tasks.py
examples/node-web-server/: README.md  package.json  velos.toml
examples/node-web-server/src/: index.js
examples/python-fastapi/: README.md  main.py  velos.toml
examples/rust-binary/: Cargo.toml  README.md  velos.toml
examples/rust-binary/src/: main.rs
include/: velos_core.h
tests/: integration_lifecycle.sh
zig/: build.zig  build.zig.zon
zig/src/: lib.zig
zig/src/cron/: parser.zig
zig/src/ipc/: protocol.zig  server.zig
zig/src/log/: collector.zig  ring_buffer.zig  writer.zig
zig/src/platform/: linux.zig  macos.zig  pal.zig
zig/src/process/: ipc_channel.zig  signals.zig  supervisor.zig
zig/src/state/: persistence.zig
zig/src/watch/: watcher.zig
