[workspace]
members = [
    "crates/velos-ffi",
    "crates/velos-core",
    "crates/velos-client",
    "crates/velos-cli",
    "crates/velos-config",
    "crates/velos-log-engine",
    "crates/velos-mcp",
    "crates/velos-metrics",
    "crates/velos-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0-dev"
edition = "2021"
license = "MIT OR Apache-2.0"
