[package]
name = "velos-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
velos-client = { path = "../velos-client" }
velos-core = { path = "../velos-core" }
