[package]
name = "velos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "velos"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tabled = { version = "0.17", features = ["ansi"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
velos-client = { path = "../velos-client" }
velos-config = { path = "../velos-config" }
velos-core = { path = "../velos-core" }
velos-ffi = { path = "../velos-ffi" }
velos-log-engine = { path = "../velos-log-engine" }
velos-metrics = { path = "../velos-metrics" }
velos-api = { path = "../velos-api" }
velos-mcp = { path = "../velos-mcp" }
velos-ai = { path = "../velos-ai" }
regex = "1"
ratatui = "0.29"
crossterm = "0.28"
dirs = "5"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
