[package]
name = "velos-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
velos-client = { path = "../velos-client" }
velos-core = { path = "../velos-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["http-proto", "reqwest-client"] }
